<resources>
    <string name="app_name">2ch まとめ</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="header">まとめサイト一覧</string>
    <string name="mind_channel">思考ちゃんねる</string>
    <string name="philosophy_news">哲学ニュース nwk</string>
    <string name="alfa_mosaic">アルファモザイク</string>
    <string name="game_new_jin">オレ的ゲーム速報@JIN</string>
    <string name="bip_blog">BIPブログ</string>
    <string name="hachima_blog">はちま起稿</string>
    <string name="navigation_sub_header">Sub Header</string>
    <string name="navigation_item_1">Navigation Item 1</string>
    <string name="navigation_item_2">Navigation Item 2</string>
    <string name="navigation_sub_item_1">Navigation Sub Item 1</string>
    <string name="navigation_sub_item_2">Navigation Sub Item 2</string>
    <string name="title_activity_web_detail">WebDetailActivity</string>
</resources>
