<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".NavigationViewActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:title="@string/mind_channel"/>
        <item
            android:id="@+id/navigation_item_2"
            android:title="@string/philosophy_news"/>
        <item
            android:id="@+id/navigation_item_3"
            android:title="@string/alfa_mosaic"/>
        <item
            android:id="@+id/navigation_item_4"
            android:title="@string/game_new_jin"/>
        <item
            android:id="@+id/navigation_item_5"
            android:title="@string/bip_blog"/>
        <item
            android:id="@+id/navigation_item_6"
            android:title="@string/hachima_blog"/>

    </group>
</menu>
